--- a/index.html
+++ b/index.html
@@ -1,20 +1,26 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My cool web</title>
-    <link href="https://buss.log/icon.ico"> <!--This image will be the page's icon-->
+    <link rel="icon" href="https://buss.log/icon.ico"> <!-- This image will be the page's icon -->
 
     <meta name="theme-color" content="#000000">
     <meta name="description" content="My cool web">
 
-    <link href="styles.css"> <!--This CSS file will be the page's styles-->
-    <!--This script tag will be the page's script-->
-    <script src="script.lua" />
+    <link rel="stylesheet" href="styles.css"> <!-- This CSS file will be the page's styles -->
+
+    <!-- Link to the Lua script properly -->
+    <script src="script.lua"></script> <!-- This script tag will be the page's script -->
 </head>
 
 <body>
   <h1>Hey there!</h1>
-  <!--This won't be the icon, and will be rendered as a regular image-->
-  <link href="https://buss.log/rick-astley.png">
+  <!-- Use the img tag to display images -->
+  <img src="https://buss.log/rick-astley.png" alt="Rick Astley">
 
-  <!--This script won't be used-->
-  <script src="script2.lua" />
+  <!-- Assuming script2.lua is necessary, otherwise remove -->
+  <script src="script2.lua"></script>
 </body>
+</html>
