--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lua Web Example</title>
+    <link rel="icon" href="https://buss.log/icon.ico">
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdn.jsdelivr.net/gh/fengari-lua/fengari-web@v0.1.1/dist/fengari-web.js"></script>
 </head>
 <body>
-    <h1>Lua Web Example</h1>
-    <button id="button">Click me!</button>
-    <input id="input" type="text" placeholder="Type something here">
+    <div class="container">
+        <h1>Lua Web Example</h1>
+        <button id="button">Click me!</button>
+        <input id="input" type="text" placeholder="Type something here">
+    </div>
     
     <script type="text/lua">
         local function print(msg)
